# cclean

./: .gitignore  CHANGELOG.md  CMakeLists.txt  GITHUB_UPLOAD_GUIDE.md  LICENSE  README.md  release_instructions.md  upload_fix_instructions.md  upload_to_github.bat
include/: cleaner.h  config.h  logger.h  utils.h
python_cclean/: README.md  build_cclean.bat  deep_cleaner.py  enhanced_quick_clean.py  optimized_cleaner.py  quick_build.py  requirements.txt  run_cclean.py  run_one_click.py  setup.py  super_cleaner.py  system_optimizer.py  version_info.txt  打包说明.md  白名单说明.txt
python_cclean/cclean/: __init__.py  backup_manager.py  cleaner.py  config.py  logger.py  main.py  one_click_cleaner.py  progress.py  security_checker.py  utils.py
src/: cleaner.cpp  logger.cpp  main.cpp  utils.cpp
